# c_project_template

./: .clang-format  .gitignore  README.md  meson.build
include/: test.h
src/: main.c
test/: meson.build
test/src/: test.cpp
